<resources>
    <string name="app_name">IOH</string>
    <string name="title_home">Friends</string>
    <string name="title_dashboard">Chats</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="hint_emailNoHp">Email atau nomor telepon</string>
    <string name="hint_password">Password</string>
    <string name="hint_lokasi">Agent location</string>
    <string name="hint_name">Agent name</string>
    <string name="title_login">Login</string>
    <string name="hint_email">Agent email</string>
    <string name="hint_divisi">Agent division</string>
    <string name="hint_posisi">Agent job position</string>
    <string name="hint_telepon">Phone Number</string>
    <string name="title_register">Register</string>
    <string name="title_no_have_account">Don\'t have account?</string>
    <string name="title_have_account">Already have account?</string>
    <string name="ini_profile">ini_profile</string>
    <string name="name">Name</string>
    <string name="no_handphone">Phone Number</string>
    <string name="account">Account</string>
    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="divisi">Division</string>
    <string name="create_message">Message...</string>
    <string name="new_friend">New contact</string>
    <string name="add_contact">Add contact</string>
    <string name="add">Invite</string>
    <string name="forgot_pass">Forgor password?</string>
    <string name="contact">Contact</string>
    <string name="search">Search...</string>
    <string name="back_button">Back Button</string>
    <string name="chats">Chats</string>
    <string name="contact_name">Red Team</string>
    <string name="msg_example">Saya sedang di jalan</string>
    <string name="edit_message">Edit message</string>
    <string name="new_message">New message</string>
    <string name="logout_message">Are you sure want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="give_feedbacks">Give feedbacks</string>
    <string name="add_feedback">Add feedback</string>
    <string name="send">Send</string>
    <string name="feedback_hint">Type feedback here</string>
    <string name="feedback_sent_message">Your feedback has sent</string>
    <string name="see_translation">See translation</string>
    <string name="list_empty_state">List empty state</string>
    <string name="no_announcement_nfor_you">No announcement\nfor you</string>
    <string name="no_chat_history">No Chat History</string>
    <string name="contact_is_empty">Contact is Empty</string>
    <string name="edit_profile">Edit profile</string>
    <string name="agent_name">Agent Name</string>
    <string name="about">About</string>
    <string name="profile_pict_hint">Add an optional profile picture</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ime">12:30</string>
    <string name="title_activity_detail_chat">DetailChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nama_user">Nama User</string>
    <string name="enter_message">Enter message...</string>
    <string name="message_value">this is message</string>
    <string name="user_status">User Status</string>
    <string name="time">Time</string>
    <string name="title_announcement">Announcements</string>
    <string-array name="array_divisi">
        <item>Call Center</item>
        <item>Digital</item>
        <item>Customer Relation</item>
        <item>VIP Services</item>
        <item>Contact Center</item>
        <item>Customer Journey</item>
        <item>Customer Experience Excellence</item>
        <item>Business Process and Training</item>
        <item>Service Quality and Exp Assurance</item>
        <item>Collection and Billing Mgt</item>
        <item>Collection and Payment</item>
        <item>Billing and Administration</item>
        <item>Verification and Credit Monitoring</item>
        <item>Biz Support and Development</item>
        <item>Business Planning and Project Tracking</item>
        <item>Infra Support and Tech Development</item>
        <item>CX Analytics and Insights</item>
        <item>CX Reporting Team</item>
    </string-array>
    <string-array name="array_posisi">
        <item>Admin</item>
        <item>Supervisor</item>
        <item>Agent</item>
    </string-array>
</resources>