<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat">

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.example.ioh.ui.contact.ContactFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.ioh.ui.chat.ChatFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.ioh.ui.announcement.AnnouncementFragment"
        android:label="@string/title_announcement"
        tools:layout="@layout/fragment_announcement" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.ioh.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>