<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.EditProfileActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue_light"
        android:paddingHorizontal="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageButton
                android:id="@+id/backIcon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_back"
                android:background="@null"
                android:contentDescription="@string/back_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/select_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/ini_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_pict_hint"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/grey"/>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_edttext_grey"
            android:hint="@string/agent_name"
            android:textColor="@color/grey"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:padding="15dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/edtPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edttext_grey"
            android:hint="@string/phone"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:textColor="@color/grey"
            android:padding="15dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/edtAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edttext_grey"
            android:hint="@string/about"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/save"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/custom_btn_red"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>