<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_message"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins_semibold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no_logout"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_btn_red"
            android:textColor="@color/white"
            android:text="@string/no"/>

        <Button
            android:id="@+id/yes_logout"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/custom_btn_red"
            android:textColor="@color/white"
            android:text="@string/yes"/>
    </LinearLayout>

</LinearLayout>