<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.chat.ChatFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/constraintLayout"
       android:layout_width="match_parent"
       android:layout_height="80dp"
       android:background="@color/blue_light"
       android:paddingHorizontal="24dp"
       android:paddingTop="24dp"
       android:paddingBottom="24dp"
       app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/poppins_semibold"
          android:text="@string/chats"
          android:textColor="@color/black"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageButton
          android:id="@+id/edit_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:background="@null"
          android:contentDescription="@string/edit_message"
          android:minWidth="48dp"
          android:minHeight="48dp"
          android:src="@drawable/ic_edit"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/new_msg_icon"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageButton
          android:id="@+id/new_msg_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@null"
          android:contentDescription="@string/new_message"
          android:minWidth="48dp"
          android:minHeight="48dp"
          android:src="@drawable/ic_new_message"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

   </androidx.constraintlayout.widget.ConstraintLayout>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv_chat"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingBottom="90dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
       app:layout_constraintVertical_bias="0.0"
       tools:itemCount="5"
       tools:layout_editor_absoluteX="0dp"
       tools:listitem="@layout/item_list_chat" />

   <LinearLayout
       android:id="@+id/chat_empty_state"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="center"
       android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <ImageView
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:src="@drawable/no_chat_state"
          android:layout_marginBottom="30dp"
          android:contentDescription="@string/list_empty_state" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/no_chat_history"
          android:textAlignment="center"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:fontFamily="@font/poppins_semibold"/>

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>