<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_decor2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/long_logo_team" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_edttext_grey"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_edttext_grey"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_edttext_grey"
                android:hint="@string/hint_telepon"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_divisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_edttext_grey"
                android:hint="@string/hint_divisi"
                android:inputType="text"
                android:paddingVertical="16dp"
                android:paddingHorizontal="12dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_edttext_grey"
                android:hint="@string/hint_divisi"
                android:inputType="text"
                android:paddingVertical="16dp"
                android:paddingHorizontal="12dp"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/rlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edttext_grey"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/iv_password"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:paddingStart="5dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="17dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_hide_password"
                    android:tag="hidden" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/title_register"
                android:textAllCaps="false"
                android:background="@drawable/custom_btn_red"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_have_account"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/title_login"
                    android:textColor="@color/primary" />


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>