<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_decor2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/long_logo_team" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_edttext_grey"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>

            <RelativeLayout
                android:id="@+id/rlPassword"
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edttext_grey"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/iv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/etPassword"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="66dp"
                    android:src="@drawable/ic_hide_password"
                    android:tag="hidden" />
            </RelativeLayout>

            <TextView
                android:id="@+id/forgotPassBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:text="@string/forgot_pass" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/title_login"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:background="@drawable/custom_btn_red"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_no_have_account"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/title_register"
                    android:textColor="@color/primary"
                    android:fontFamily="@font/poppins_semibold"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>